[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsk-collateral-monitor"
version = "1.0.0"
description = "Monitor BTC-backed positions on Rootstock's Money on Chain protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Matias Fleker", email = "matiasfleker@gmail.com"}
]
keywords = ["rootstock", "rsk", "defi", "blockchain", "monitoring", "bitcoin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "web3>=6.0.0",
    "python-telegram-bot>=20.0",
    "streamlit>=1.28.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "safety>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/oVservant/rsk-collateral-monitor"
Documentation = "https://github.com/oVservant/rsk-collateral-monitor/blob/main/docs/ARCHITECTURE.md"
Repository = "https://github.com/oVservant/rsk-collateral-monitor"
Issues = "https://github.com/oVservant/rsk-collateral-monitor/issues"
Changelog = "https://github.com/oVservant/rsk-collateral-monitor/blob/main/CHANGELOG.md"

[project.scripts]
rsk-monitor = "scripts.poll_positions:poll_positions"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "db*", "bot*", "config*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
